--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "7.1.3",
-    "@mantine/hooks": "7.1.3",
+    "@mantine/core": "^7.1.3",
+    "@mantine/hooks": "^7.1.3",
+    "@tabler/icons-react": "^2.39.0",
+    "icons-react": "^3.7.1",
     "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
@@ -21,8 +24,8 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "postcss": "^8.4.24",
-    "postcss-preset-mantine": "1.8.0",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.8.0",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "5.0.4"
   }
