--- a/package.json
+++ b/package.json
@@ -1,32 +1,51 @@
 {
-  "name": "mantine-minimal-next-template",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@mantine/core": "^7.1.3",
-    "@mantine/hooks": "^7.1.3",
-    "@tabler/icons-react": "^2.39.0",
-    "icons-react": "^3.7.1",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tabler-icons-react": "^1.56.0"
-  },
-  "devDependencies": {
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.8.0",
-    "postcss-simple-vars": "^7.0.1",
-    "typescript": "5.0.4"
-  }
+    "name": "code-editor",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "codemirror": "5.65.2",
+        "express": "^4.18.2",
+        "react": "^18.2.0",
+        "react-avatar": "^5.0.3",
+        "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.1",
+        "react-router-dom": "^6.15.0",
+        "react-scripts": "5.0.1",
+        "socket.io": "^4.7.2",
+        "socket.io-client": "^4.7.2",
+        "uuid": "^9.0.0",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "server:dev": "nodemon server.js",
+        "Server:prod": "node server.js",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
+    }
 }
