--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^13.5.0",
         "codemirror": "5.65.2",
         "express": "^4.18.2",
+        "randomstring": "^1.3.0",
         "react": "^18.2.0",
         "react-avatar": "^5.0.3",
         "react-dom": "^18.2.0",
