--- a/package.json
+++ b/package.json
@@ -3,19 +3,41 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@codemirror/lang-cpp": "^6.0.2",
+        "@codemirror/lang-css": "^6.2.1",
+        "@codemirror/lang-html": "^6.4.6",
+        "@codemirror/lang-java": "^6.0.1",
+        "@codemirror/lang-javascript": "^6.2.1",
+        "@codemirror/lang-json": "^6.0.1",
+        "@codemirror/lang-php": "^6.0.1",
+        "@codemirror/lang-python": "^6.1.3",
+        "@codemirror/lang-sql": "^6.5.4",
+        "@codemirror/lang-xml": "^6.0.2",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@uiw/codemirror-theme-abcdef": "^4.21.20",
+        "@uiw/codemirror-theme-darcula": "^4.21.20",
+        "@uiw/codemirror-theme-dracula": "^4.21.20",
+        "@uiw/codemirror-theme-eclipse": "^4.21.20",
+        "@uiw/codemirror-theme-github": "^4.21.20",
+        "@uiw/codemirror-theme-tokyo-night": "^4.21.20",
+        "@uiw/codemirror-theme-vscode": "^4.21.20",
+        "@uiw/codemirror-themes": "^4.21.20",
+        "@uiw/react-codemirror": "^4.21.20",
         "codemirror": "5.65.2",
         "express": "^4.18.2",
+        "randomstring": "^1.3.0",
         "react": "^18.2.0",
         "react-avatar": "^5.0.3",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
+        "react-icons": "^4.11.0",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
         "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
+        "styled-components": "^6.1.1",
         "uuid": "^9.0.0",
         "web-vitals": "^2.1.4"
     },
