--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
+        "@mui/icons-material": "^5.14.18",
+        "@mui/material": "^5.14.18",
+        "@mui/styles": "^5.14.18",
         "@codemirror/lang-cpp": "^6.0.2",
         "@codemirror/lang-css": "^6.2.1",
         "@codemirror/lang-html": "^6.4.6",
@@ -16,6 +23,7 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "clsx": "^2.0.0",
         "@uiw/codemirror-theme-abcdef": "^4.21.20",
         "@uiw/codemirror-theme-darcula": "^4.21.20",
         "@uiw/codemirror-theme-dracula": "^4.21.20",
