--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@material-ui/core": "^4.12.4",
-        "@material-ui/icons": "^4.11.3",
-        "@mui/icons-material": "^5.14.18",
-        "@mui/material": "^5.14.18",
-        "@mui/styles": "^5.14.18",
         "@codemirror/lang-cpp": "^6.0.2",
         "@codemirror/lang-css": "^6.2.1",
         "@codemirror/lang-html": "^6.4.6",
@@ -20,10 +13,16 @@
         "@codemirror/lang-python": "^6.1.3",
         "@codemirror/lang-sql": "^6.5.4",
         "@codemirror/lang-xml": "^6.0.2",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
+        "@mui/icons-material": "^5.14.18",
+        "@mui/material": "^5.14.18",
+        "@mui/styles": "^5.14.18",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "clsx": "^2.0.0",
         "@uiw/codemirror-theme-abcdef": "^4.21.20",
         "@uiw/codemirror-theme-darcula": "^4.21.20",
         "@uiw/codemirror-theme-dracula": "^4.21.20",
@@ -33,15 +32,17 @@
         "@uiw/codemirror-theme-vscode": "^4.21.20",
         "@uiw/codemirror-themes": "^4.21.20",
         "@uiw/react-codemirror": "^4.21.20",
+        "clsx": "^2.0.0",
         "codemirror": "5.65.2",
         "express": "^4.18.2",
+        "firebase": "^10.6.0",
         "randomstring": "^1.3.0",
         "react": "^18.2.0",
         "react-avatar": "^5.0.3",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.11.0",
-        "react-router-dom": "^6.15.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "5.0.1",
         "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
